[gd_scene load_steps=4 format=3 uid="uid://d0tuc4iw5o6u6"]

[ext_resource type="Script" uid="uid://dkublbp2fmn6a" path="res://scripts/ui/ElementOrb.gd" id="1_orb"]
[ext_resource type="Shader" uid="uid://c04dsbdnb3g7m" path="res://scenes/battle/ui_components/ElementOrb.gdshader" id="2_lmw2b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bo5rq"]
shader = ExtResource("2_lmw2b")

[node name="ElementOrb" type="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchor_right = 0.104
anchor_bottom = 0.185
offset_right = 0.319992
offset_bottom = 0.199997
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_orb")

[node name="OrbSprite" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bo5rq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ArrowLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1
